@@ -1,7 +1,9 @@
 [% USE CGI %]
 [% INCLUDE header.tt page_title = "Edit $node_name - $site_name" %]
 <div id="content">
-
+[% IF read_only %]
+[% INCLUDE read_only.tt %]
+[% ELSE %]
   <h1 class="edit_form_title">Edit &quot;[% node_name %]&quot;</h1>
 
   [% IF conflict %]
@@ -419,5 +421,5 @@
     </div>
     <br clear="all" />
   [% END %]
-
+[% END %]
 [% INCLUDE footer.tt omit_footer_search_form = 1 %]
