@@ -2,7 +2,9 @@
   <div id="navbar_this_page">
     <div class="navbar_group_title">This page:</div>
     <ul>
+[% UNLESS read_only %]
       <li><a class="edit_page_link" href="[% source_site or full_cgi_url %]?id=[% node_param %];action=edit">Edit this page</a></li>
+[% END %]
       <li><a href="[% full_cgi_url %]?action=show_backlinks;id=[% node_param %]">Show pages linking here</a></li>
       [% IF version AND version > 1 %]
         <li><a href="[% full_cgi_url %]?action=list_all_versions;id=[% node_param %]">List all revisions</a></li> 
